--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>Sticky Navigation</title>
 </head>
 <body>
-    <h1>Project Start</h1>
+
+    <nav class="nav">
+        <div class="container">
+            <h1 class="logo"><a href="/index.html">My Website</a></h1>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="hero">
+        <div class="container">
+            <h1>Welcome To My Website</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo vel hic officia adipisci facere quas aperiam ipsa fugiat aut!</p>
+        </div>
+    </div>
+
+    <section class="container content">
+        <h2>Content One</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut fugit dolore perspiciatis tenetur, quasi neque delectus culpa aperiam maiores officia ab ipsam iste, distinctio eum enim, porro dicta facere dolores ipsum! Minus sapiente praesentium recusandae rerum accusamus, sit vero asperiores non ratione ab deserunt quibusdam temporibus veritatis quaerat quidem facilis adipisci quam excepturi quo, aut, nulla placeat. Accusamus voluptatum animi blanditiis laboriosam necessitatibus fuga nisi quo odio corrupti. Dolor soluta pariatur quibusdam laborum in error saepe ut, consequatur provident unde sit, ea fugit nemo consectetur cum. Porro, vel dolorem sit optio ipsam dolorum ipsum perspiciatis laborum soluta, dolores veritatis reprehenderit?</p>
+    
+        <h3>Content Two</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus facere maxime doloribus animi, consectetur ut similique corrupti tempora illo! Quas consectetur minus ad quam eveniet vel. Non, distinctio delectus repudiandae hic amet molestias tempora cumque itaque quia placeat neque autem saepe, incidunt similique quasi sapiente? Repellat aut ipsa similique eaque praesentium velit, assumenda nostrum illum error aperiam! Hic, modi quis optio possimus explicabo dolor porro totam similique sit, voluptatem asperiores exercitationem architecto corporis nemo iure fugiat itaque unde odio aspernatur voluptatibus ipsum praesentium nisi adipisci tempora. Autem, accusantium? Accusantium voluptatum adipisci ad officia placeat aliquam nisi blanditiis expedita, impedit minima!</p>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
